# dab-sample-project

./: .gitignore  README.md  Taskfile  databricks.yml  pyproject.toml
src/dab_sample_project/: job.py
